service nav error fix

--- a/wp-content/themes/sky2c-new/style.css
+++ b/wp-content/themes/sky2c-new/style.css
@@ -633,3 +633,4 @@ div.dark_square #pp_full_res .pp_inline { color: #fff }
 .edd_downloads_list .edd_download { margin-bottom: 30px; }
 .edd_downloads_list .edd_download_inner { margin: 0; }
 .edd_downloads_list .edd_download_title { margin: 0 0 10px; font-size: 21px; }
+.swisscode{position: absolute; left: -17912px !important; }
