modify some css for video play

--- a/crm/libraries/jquery/video-js/video-js.css
+++ b/crm/libraries/jquery/video-js/video-js.css
@@ -628,7 +628,7 @@ control positioning and full window mode. **
 */
 .video-js {
   background-color: #000;
-  position: relative;
+  /* position: relative; */
   padding: 0;
   /* Start with 10px for base font size so other dimensions can be em based and
      easily calculable. */
